--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <dialog-matertial-component></dialog-matertial-component>
 </body>
 </html>
